--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.iml
+*.log
 .gradle
 /local.properties
 /.idea/caches
@@ -12,4 +13,8 @@
 /captures
 .externalNativeBuild
 .cxx
+*.apk
+*.aab
+output.json
+output-metadata.json
 local.properties
